--- a/belts.html
+++ b/belts.html
@@ -4,14 +4,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>
+    <ol>
         <li><a href="index.html">Home</a></li>
         <li><a href="belts.html"  class="active">LPU Belts</a></li>
-        <li><a href="#contact">Blog</a></li>
-        <li><a href="#about">Locks I have picked</a></li>
-    </ul>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="locksihavepicked.html">Locks I have picked</a></li>
+    </ol>
     <header>
-    <img src="logo.png" alt="logo" width="250" height="150">
+        <img src="logo.png" alt="logo" width="250" height="150">
+        <h1>LPU Belts</h1>
     </header>
     <h3>White Belt</h3>
     <p>It appears that I do not have that belt currently.</p>
