--- a/locksihavepicked.html
+++ b/locksihavepicked.html
@@ -5,14 +5,14 @@
 </head>
 <body>
     <ol>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="belts.html">LPU Belts</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="locksihavepicked.html">Locks I have picked</a></li>
+        <li><a href="locksihavepicked.html"  class="active">Locks I have picked</a></li>
     </ol>
     <header>
     <img src="logo.png" alt="logo" width="250" height="150">
+    <h1>Locks I have picked</h1>
     </header>
-    <p>This website is for recording and documenting my lockpicking achievments</p>
-    <p>Drop me an email <a href="mailto:zachwilkinson-rowe@suttongrammar.school">here</a>!</p>
+    <p>I have unfortunately not picked any locks yet. Keep your eye on this page!</p>
 </body>
