--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,13 @@
         <li><a href="belts.html">LPU Belts</a></li>
         <li><a href="blog.html" class="active">Blog</a></li>
         <li><a href="locksihavepicked.html">Locks I have picked</a></li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">My Tools</a>
+            <div class="dropdown-content">
+              <a href="wardedandwafer.html">Warded and Wafer</a>
+              <a href="pintumbler.html">Pin Tumbler</a>
+            </div>
+          </li>
     </ol>
     <header>
     <img src="logo.png" alt="logo" width="250" height="150">
