--- a/pintumbler.html
+++ b/pintumbler.html
@@ -5,12 +5,12 @@
 </head>
 <body>
     <ol>
-        <li><a href="index.html" >Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="belts.html">LPU Belts</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="locksihavepicked.html" class="active">Locks I have picked</a></li>
+        <li><a href="locksihavepicked.html">Locks I have picked</a></li>
         <li class="dropdown">
-            <a href="javascript:void(0)" class="dropbtn">My Tools</a>
+            <a href="javascript:void(0)" class="dropbtn active">My Tools</a>
             <div class="dropdown-content">
               <a href="wardedandwafer.html">Warded and Wafer</a>
               <a href="pintumbler.html">Pin Tumbler</a>
@@ -19,7 +19,5 @@
     </ol>
     <header>
     <img src="logo.png" alt="logo" width="250" height="150">
-    <h1>Locks I have picked</h1>
+    <h1>Pin Tumbler Tools</h1>
     </header>
-    <p>I have unfortunately not picked any locks yet. Keep your eye on this page!</p>
-</body>
