--- a/belts.html
+++ b/belts.html
@@ -16,6 +16,7 @@
               <a href="pintumbler.html">Pin Tumbler</a>
             </div>
           </li>
+          <li><a href="timeline.html">Timeline</a></li>
     </ol>
     <header>
         <img src="logo.png" alt="logo" width="250" height="150">
